fix btn width on mobile

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -13,6 +13,7 @@
 @media (max-width: 1024px) {
     .btn {
         width: 100%;
+        padding: 15px 20px;
     }
 }
 
